Initial 26.2 port